Hopefully this fixes weird format on mobile phone

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,10 @@ position: relative;
 
 }
 
+.container {
+  position: relative;
+}
+
 .div-top {
 float:right;
  /*display: inline-block; */
